--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <a href="index.html" class="active">Home</a>
   <a href="blog.html">Blog</a>
   <a href="social.html">Social</a>
+  <a href="settings.html">settings</a>
 </nav>
 
 <main>
