--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             align-items: center;
             gap: 0.35rem;
             transition: all 0.18s ease-out;
+            text-decoration: none;
         }
 
         .btn span {
@@ -280,22 +281,9 @@
             border-radius: 999px;
         }
 
-        .hero-dot.red {
-            background: #f97373;
-        }
-
-        .hero-dot.yellow {
-            background: #facc15;
-        }
-
-        .hero-dot.green {
-            background: #22c55e;
-        }
-
-        .hero-panel-body {
-            margin-top: 0.4rem;
-            font-size: 0.8rem;
-        }
+        .hero-dot.red { background: #f97373; }
+        .hero-dot.yellow { background: #facc15; }
+        .hero-dot.green { background: #22c55e; }
 
         .hero-panel-body pre {
             background: radial-gradient(circle at top left, rgba(15, 23, 42, 0.9), rgba(15, 23, 42, 0.95));
@@ -305,6 +293,7 @@
             overflow-x: auto;
             font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
             color: #e5e7eb;
+            font-size: 0.8rem;
         }
 
         .hero-panel-footer {
@@ -490,14 +479,14 @@
                 <a href="#risorse">Risorse</a>
             </nav>
             <div class="nav-cta">
-                <button class="btn">
+                <a href="https://github.com/Nex0nTech" class="btn">
                     <span>★</span>
                     Star su GitHub
-                </button>
-                <button class="btn btn-primary">
+                </a>
+                <a href="https://nex0ntech.github.io/Playground" class="btn btn-primary">
                     <span>▶</span>
-                    Entra nel Playground
-                </button>
+                    Playground
+                </a>
             </div>
         </div>
     </header>
@@ -510,27 +499,33 @@
                     <span>●</span> laboratorio digitale indipendente
                 </div>
                 <h1 class="hero-title">
-                    Costruiamo strumenti reali per
-                    <span>insegnanti, maker e curiosi</span>.
+                    Esperimenti web, community e strumenti creati a mano per
+                    <span>maker e curiosi</span>.
                 </h1>
                 <p class="hero-subtitle">
-                    Sandbox, gradebook, editor e piccole follie di codice: ogni progetto è pensato per essere
-                    usabile, chiaro e un po’ giocoso. Niente vetrine vuote—solo esperimenti vivi.
+                    Forum, playground, micro‑tool e prototipi: tutto scritto in HTML/CSS/JS puro,
+                    con un’estetica giocosa e un approccio artigianale.
                 </p>
+
                 <div class="hero-actions">
-                    <button class="btn btn-primary">
-                        <span>⚡</span>
-                        Prova il Gradebook demo
-                    </button>
-                    <button class="btn">
+                    <a href="https://nex0ntech.github.io/NexusForum" class="btn btn-primary">
+                        <span>💬</span>
+                        Entra nel NexusForum
+                    </a>
+                    <a href="https://nex0ntech.github.io/Playground" class="btn">
+                        <span>🧪</span>
+                        Apri il Playground
+                    </a>
+                    <a href="https://github.com/Nex0nTech" class="btn">
                         <span>📂</span>
-                        Esplora i repo su GitHub
-                    </button>
+                        Repo GitHub
+                    </a>
                 </div>
+
                 <div class="hero-meta">
                     <div><strong>+10</strong> prototipi attivi</div>
-                    <div><strong>Focus:</strong> HTML/CSS/JS “a mano”, niente framework pesanti</div>
-                    <div><strong>Stato:</strong> sempre in beta, sempre in evoluzione</div>
+                    <div><strong>Focus:</strong> HTML/CSS/JS “a mano”</div>
+                    <div><strong>Stato:</strong> work‑in‑progress continuo</div>
                 </div>
             </div>
 
@@ -538,142 +533,4 @@
                 <div class="orb"></div>
                 <div class="hero-panel">
                     <div class="hero-panel-header">
-                        <div class="hero-panel-title">NexusForum • snapshot</div>
-                        <div class="hero-panel-badges">
-                            <div class="hero-dot red"></div>
-                            <div class="hero-dot yellow"></div>
-                            <div class="hero-dot green"></div>
-                        </div>
-                    </div>
-                    <div class="hero-panel-body">
-                        <pre>
-/* NexonTech ritual */
-community.create({
-  mood: "welcoming",
-  style: "hand-crafted",
-  tech: ["HTML", "CSS", "JS"],
-  extras: ["commenti nel codice", "demo reali"]
-});</pre>
-                    </div>
-                    <div class="hero-panel-footer">
-                        <span class="hero-pill">Live playground</span>
-                        <span>Ultimo update: oggi, tardi la notte</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- CARDS: PROGETTI -->
-        <section class="section" id="progetti">
-            <div class="section-header">
-                <div>
-                    <h2 class="section-title">Progetti in evidenza</h2>
-                    <p class="section-subtitle">
-                        Strumenti concreti, pensati per essere usati davvero in classe, in laboratorio o per gioco.
-                    </p>
-                </div>
-                <a href="https://github.com/Nex0nTech" class="section-link">Vedi tutti i repository →</a>
-            </div>
-
-            <div class="cards">
-                <article class="card">
-                    <div class="card-label">Gradebook</div>
-                    <div class="card-title">Registro per insegnanti in un solo file HTML</div>
-                    <p class="card-body">
-                        Studenti, voti, note, presenze e lezioni: tutto in una pagina, senza backend.
-                        Pensato per essere leggibile, modificabile e clonabile.
-                    </p>
-                    <div class="card-meta">
-                        <span class="pill">Demo inclusa</span>
-                        <span>Stato: attivo</span>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="card-label">NexusForum</div>
-                    <div class="card-title">Forum leggero per condividere esperimenti</div>
-                    <p class="card-body">
-                        Un luogo per postare snippet, prototipi e piccole scoperte. Niente like tossici,
-                        solo feedback onesto e curiosità.
-                    </p>
-                    <div class="card-meta">
-                        <span class="pill">Community-first</span>
-                        <span>Stato: in costruzione</span>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="card-label">Playground</div>
-                    <div class="card-title">Mini sandbox per HTML/CSS/JS</div>
-                    <div class="card-meta">
-                        <span class="pill">Zero build tools</span>
-                        <span>Stato: prototipo</span>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <!-- CARDS: COMMUNITY / RISORSE -->
-        <section class="section" id="community">
-            <div class="section-header">
-                <div>
-                    <h2 class="section-title">Community & risorse</h2>
-                    <p class="section-subtitle">
-                        L’obiettivo è semplice: imparare insieme, condividere codice reale e non avere paura di mostrare i work-in-progress.
-                    </p>
-                </div>
-                <a href="#risorse" class="section-link">Vai alle guide →</a>
-            </div>
-
-            <div class="cards">
-                <article class="card">
-                    <div class="card-label">Guide</div>
-                    <div class="card-title">Tutorial in stile NexonTech</div>
-                    <div class="card-meta">
-                        <span class="pill">HTML/CSS/JS</span>
-                        <span>Nuovi ogni mese</span>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="card-label">Feedback</div>
-                    <div class="card-title">Issue come conversazioni, non lamentele</div>
-                    <p class="card-body">
-                        Le issue su GitHub sono usate come chat tecnica: idee, bug, proposte di miglioramento.
-                        Ogni commento è un pezzo di documentazione viva.
-                    </p>
-                    <div class="card-meta">
-                        <span class="pill">Open discussion</span>
-                        <span>Zero ego</span>
-                    </div>
-                </article>
-
-                <article class="card" id="risorse">
-                    <div class="card-label">Setup</div>
-                    <div class="card-title">Ambienti leggeri, realistici</div>
-                    <div class="card-meta">
-                        <span class="pill">QEMU / ChromeOS / Linux</span>
-                        <span>Note tecniche incluse</span>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-inner">
-            <div>© <span id="year"></span> NexonTech • Piccoli esperimenti, grande cura nei dettagli.</div>
-            <div class="footer-links">
-                <a href="https://github.com/Nex0nTech">GitHub</a>
-                <a href="#community">Community</a>
-                <a href="#progetti">Progetti</a>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Aggiorna automaticamente l'anno nel footer
-        document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
-</body>
-</html>
+                        <
